# 02--costing_calculate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  v3修改构想  v4构想
.superpowers/sdd/: task-4-report.md
_archive/gui-removed-20260709/src-gui/: __init__.py  app.py  main_window.py  validators.py
_archive/gui-removed-20260709/tests-gui/: test_gui_task_worker.py
docs/: 2026-07-09-remove-gui-python311-plan.md  2026-07-09-work-order-anomaly-architecture-fast-writer-spec.md  README.md  optimization-assessment.md  python_retirement_after_rust.md  rust_rewrite_validation.md  rust_xlsxwriter_sidecar_spike_spec.md
docs/evidence/: 2026-07-10-rust-validation.md  2026-07-12-rust-performance-validation.md
docs/field_definitions/: gb金蝶字段.html  gb金蝶字段.txt
docs/performance/: README.md
docs/performance/baselines/: 2026-07-11-windows-x64-phase0a.json
docs/performance/dependencies/: 2026-07-11-rust-xlsxwriter-0.96.0.json
docs/superpowers/plans/: 2026-04-09-dual-entry.md  2026-04-10-sk-software-fee-standalone.md  2026-04-12-full-chain-polars-migration.md  2026-04-12-lightweight-excel-export.md  2026-04-27-gb-product-anomaly-scope-split.md  2026-04-27-work-order-anomaly-production-scope.md  (+18 more)
rust/: Cargo.toml
rust/crates/costing-cli/: Cargo.toml
rust/crates/costing-cli/src/: args.rs  main.rs  run.rs
rust/crates/costing-cli/tests/: cli_benchmark.rs  cli_errors.rs
rust/crates/costing-core/: Cargo.toml
rust/crates/costing-core/src/: anomaly.rs  error.rs  fact.rs  lib.rs  model.rs  normalize.rs  pipeline.rs  presentation.rs  quality.rs  scoring.rs  sheet_contract.rs  split.rs  table.rs  timing.rs
rust/crates/costing-oracle-tests/: Cargo.toml
rust/crates/costing-oracle-tests/src/: lib.rs
rust/crates/costing-oracle-tests/tests/: runtime_contract.rs
rust/crates/costing-xlsx/: Cargo.toml
rust/crates/costing-xlsx/src/: lib.rs  reader.rs  snapshot.rs  writer.rs
scripts/: Costing_Calculate.py  Costing_Calculating_V2.0.py  抓取所有字段脚本.py
spikes/001-rust-xlsxwriter-sidecar/: README.md
src/analytics/: __init__.py  anomaly.py  contracts.py  errors.py  fact_builder.py  pq_analysis.py  presentation_builder.py  qty_enricher.py  quality.py  scoring.py  summary.py  table_rendering.py
src/config/: pipelines.py  product_whitelist_store.py  settings.py
src/etl/: costing_etl.py  costing_v2.py  month_filter.py  pipeline.py  runner.py  utils.py
src/excel/: __init__.py  conditional_formats.py  excel_values.py  fast_writer.py  product_anomaly_writer.py  sheet_writers.py  styles.py  workbook_writer.py
src/gui/: form_state.py  main_window.py  styles.py  task_worker.py  validators.py
src/services/: __init__.py  costing_service.py  progress.py
tests/: test_costing_etl.py  test_costing_etl_entrypoint.py  test_costing_service.py  test_costing_v2.py  test_costing_v2_entrypoint.py  test_etl_pipeline.py  test_full_rust_cli_benchmark.py  test_full_rust_cli_oracle.py  test_gui_form_state.py  test_gui_main_window.py  test_gui_styles.py  test_gui_task_worker.py  test_main.py  test_month_filter.py  test_pipeline_config.py  test_pq_analysis.py  test_pq_analysis_v3.py  test_product_whitelist_store.py  test_quality.py  test_runner.py  test_rust_check_only_benchmark.py  test_rust_xlsxwriter_sidecar_spike.py  test_summary.py  test_weighted_zscore.py
tests/architecture/: test_import_rules.py
tests/contracts/: README.md  __init__.py  _workbook_contract_helper.py  generate_baselines.py  test_cli_contract.py  test_error_log_contract.py  test_workbook_contract.py
tests/rust_oracle/: __init__.py  _winpath.py  benchmark.py  benchmark_protocol.py  capture_cpu_profile.ps1  evidence.py  measure_peak_working_set.ps1  oracle_runner.py  phase0_harness.py  repo_paths.py  sanitized_fixture.py  test_benchmark.py  test_benchmark_protocol.py  test_evidence.py  test_oracle_runner.py  test_peak_working_set.py  test_phase0_harness.py  test_workbook_compare.py  workbook_compare.py
(+37 files in other folders)
