[workspace]
members = [
    "crates/costing-cli",
    "crates/costing-core",
    "crates/costing-oracle-tests",
    "crates/costing-xlsx",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
calamine = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_xlsxwriter = { git = "https://github.com/Aspirin86942/rust_xlsxwriter.git", rev = "f4e4e99f920937709d6dacb4680c60ea3f80486f", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
