[package]
name = "costing-calculate"
version.workspace = true
edition.workspace = true

[features]
default = []
low-memory = ["costing-xlsx/low-memory"]
zlib = ["costing-xlsx/zlib"]
zmij = ["costing-xlsx/zmij"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
costing-core = { path = "../costing-core" }
costing-xlsx = { path = "../costing-xlsx" }
serde_json.workspace = true

[dev-dependencies]
rust_xlsxwriter.workspace = true
